--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <link href="css/contentarea.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/custom-style.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/swiper-3.4.2.min.css">
     <!--[if IE]>
 <link href="css/ie8.css" rel="stylesheet">
 <![endif]-->
@@ -48,6 +49,15 @@
         #cc img{
             width: 116px;
             height: 116px;
+        }
+        .swiper-container{
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+        }
+        .swiper-container img{
+            width: 100%;
+            height: 100%;
         }
     </style>
     <script>
@@ -124,11 +134,29 @@
     <section id="top">
         <h2 style="display: none;">Fresh Design</h2>
         <div id="video-bg">
-            <video autoplay muted loop class="dt">
-                <source src="https://wearechain.oss-cn-beijing.aliyuncs.com/video/ver3_1.webm" type="video/webm">
-                <!--source src="/assets/2d43cdf7/video/ver3_1.ogv" type="video/ogg"-->
-                <source src="https://wearechain.oss-cn-beijing.aliyuncs.com/video/ver3_1.mp4" type="video/mp4">
-            </video>
+            <div class="swiper-container">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <img src="./images/swiper1.jpg"/>
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./images/swiper2.jpg"/>
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./images/swiper3.jpg"/>
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./images/swiper4.jpg"/>
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./images/swiper5.jpg"/>
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./images/swiper6.jpg"/>
+                  </div>
+                </div>
+                
+              </div>
         </div>
         <div id="logo">
             <img src="picture/logo.png" />
@@ -178,7 +206,7 @@
     </section>
 
     <!-- Here will be slider (main banner) -->
-    <section id="results">
+    <!-- <section id="results">
         <div class="half animate">
             <div class="box right">
                 <h3 class="dt">官方全民链应用：媒购区块链电商平台</h3>
@@ -203,7 +231,7 @@
             </div>
         </div>
         <div class="clearfix"></div>
-    </section>
+    </section> -->
     <!-- /Here will be slider (main banner) -->
 
     <section id="gray-block">
@@ -454,6 +482,18 @@
         }];
     </script>
     <script src="js/validate.js"></script>
+    <script src="js/swiper-3.4.2.min.js"></script>
+    <script>
+        var mySwiper=new Swiper('.swiper-container',{
+            autoplay : 4000,
+            autoplayDisableOnInteraction : false,
+            loop: true,
+            pagination : '.swiper-pagination',
+            paginationClickable : true,
+            speed:1000,
+            effect:'fade',
+        })
+    </script>
     <!-- end-body -->
 </body>
 
