修改首页内容

--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
     <meta name="designer" content="FreshDesign" />
     <meta name="HandheldFriendly" content="True" />
     <!-- FAVICONS FOR APPLE -->
-    <link rel="apple-touch-icon" sizes="144x144" href="/img/favicons/apple-touch-icon-144x144-precomposed.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/img/favicons/apple-touch-icon-72x72-precomposed.png">
-    <link rel="apple-touch-icon" href="/img/favicons/apple-touch-icon-precomposed.png">
     <!-- END OF FAVICONS -->
     <link href="/" rel="canonical" />
     <meta name="googlebot" content="archive">
@@ -192,8 +189,8 @@
         </div>
         <div class="box dt vad1"><!-- web端 -->
             <div class="half animate">
-                <h3>一直走在区块链技术应用的最前沿</h3>
-                <p>全民链团队从2014年起，始终专注于区块链技术研发及落地应用，曾参与同两家世界500强企业的区块链项目合作；在这些项目经验的基础上，全民链选择了“区块链电商”作为新征程的起点：将媒体、电商、实体店紧密结合，最大程度吸引终端消费，共同营销，立体多维解决用户的实际需求，实现最接地气的区块链项目。</p>
+                <h3>六．皇家珍宝馆</h3>
+                <p>汉唐臻韵皇家珍宝馆馆藏文物艺术品12万件（组），是陕西目前最大的民间综合性博物馆。博物馆位于秦岭北麓，展陈面积2700平方米，由序厅、清朝文物展厅、佛教文物展厅、瓷器展厅、青铜器展厅、玉器展厅、金银器展厅、书画展厅、明清家俱展厅等九个展厅组成，展出藏品数量12余万件(组)，其中珍贵文物艺术品逾1万件(组)</p>
             </div>
             <div class="img clients animate delay j-videoAD1"></div>
             <img src="picture/vedio_1.jpg" alt="" id="video1-2" class="click_vedio_img">
@@ -205,63 +202,36 @@
         <div class="clearfix"></div>
     </section>
 
-    <!-- Here will be slider (main banner) -->
-    <!-- <section id="results">
-        <div class="half animate">
-            <div class="box right">
-                <h3 class="dt">官方全民链应用：媒购区块链电商平台</h3>
-                <p>媒购电商是发挥区块链技术优势下一代电商的新模式，采取5+3模式，即融合实体店、电视媒体、新媒体、电话营销、电商APP等5渠道，区块链品质见证机制、区块链预付款服务平台、区块链第四方支付金融平台等3平台，让“优质优价”的商品模式逐步完成市场的自然优胜劣汰。</p>
-                <div id="text-slider">
-                    <div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="slider">
-            <div id="sites-slider">
-                <div>
-                    <img src="picture/1.png" alt="">
-                </div>
-                <div>
-                    <img src="picture/2.png" alt="">
-                </div>
-                <div>
-                    <img src="picture/3.png" alt="">
-                </div>
-            </div>
-        </div>
-        <div class="clearfix"></div>
-    </section> -->
-    <!-- /Here will be slider (main banner) -->
+ 
 
     <section id="gray-block">
         <div class="box animate">
             <div class="scene">
-                <p class="title">全民链更多应用场景</p>
+                <p class="title">CRBC更多应用场景</p>
             </div>
             <div class="clearfix"></div>
         </div>
         <ul>
             <li>
                 <img src="picture/cj1.png" alt="">
-                <p class="title">企业积分 /储值卡发行管理平台</p>
-                <p>基于区块链技术的积分/储蓄卡发放管理平台，降低运营成本，打通互换通道</p>
+                <p class="title">融资信用担保</p>
+                <p>CRBC投资基金会名下的所有文艺收藏品利用量子鉴定技术进行公开鉴定，并将所有的鉴定数据，包括藏品的来历，年代，和估值全部尽心量化处理，确保记录的公开透明，且可溯源以及不可肆意篡改，每一次藏品数据的改动，包括价值浮动，物流信息，等都会如同一次交易与上一个区块中数据双向锚定，确保阳光操作。</p>
             </li>
             <li>
                 <img src="picture/cj2.png" alt="">
-                <p class="title">智能合约</p>
-                <p>拟采用预定义合约与自主生成合约两类；由全民链提供模板化合约，合约签订人仅需提供关键信息，合约由系统自动生成。</p>
+                <p class="title">企业运营数据的智能化管理</p>
+                <p>RBC力图打造的是一个公开透明的良性资本融通系统，为了确保每一个投资者，投资机构能够将自己的资金风险降到最低，将会布局具备专业数据分析能力的强算力节点，在为企业提供数据化和智能化管理服务的同时，也为系统监督企业的运营情况和资金流向。</p>
             </li>
             <li>
                 <img src="picture/cj3.png" alt="">
-                <p class="title">分布式账本</p>
-                <p>全民链将会对商业平台提供易用的分布式账本，通过网格计算化的共识算法提升响应速度，达到正常商用的标准。</p>
+                <p class="title">投资理财</p>
+                <p>CRBC的资金入口节点将会由两个部分组成，一个是具备一定闲置资金的中等收入阶层组成的个体投资者，一个是海外认可艺术珍藏品作为信用背书的专业金融机构或者投资基金。</p>
             </li>
-            <li>
+          <!--   <li>
                 <img src="picture/cj4.png" alt="">
                 <p class="title">物联网链</p>
                 <p>全民链可构建物联网链，存储由物联网络终端设备采集的数据，使其持续存在且无法被篡改，提升数据的可信度。</p>
-            </li>
+            </li> -->
             <li>
                 <img src="picture/cj5.png" alt="">
                 <p class="title">资产链</p>
