--- a/index.html
+++ b/index.html
@@ -242,16 +242,16 @@
     <section class="white-block1 white-block2">
         <div class="mob vad1">
             <div class="animate">
-                <h3>感谢有你们！全民链必将不懈前行！</h3>
-                <p>由衷感谢国内外各界人士通过视频的方式为全民链打CALL，承蒙朋友们自全民链创建以来对我们的坚定支持，全民链也必将矢志不渝，永葆初心，不懈前行！</p>
+                <h3>运用区块链技术，让文物活起来</h3>
+                <p>CRBC通过运用区块链技术，将文物的实物资产进行估值，并将估值数据记录进入主链当中，构建自身分布式的资产数据库。数字化的文物资产可以作为融资融贷的质押担保，为具备创新力和发展前景的中小企业解决资本难题，促进资本的流通，解决目前金融体系，小微企业融资程序复杂，融资成本高昂，和融资渠道狭隘的难题。</p>
                 <img src="picture/vedio_2.jpg" alt=""  id="video2" style="width: 100%;height: 100%;">
                 <div class="videoWrap j-videoAD2"></div>
             </div>
         </div>
         <div class="box dt vad1">
             <div class="half animate">
-                <h3>感谢有你们！全民链必将不懈前行！</h3>
-                <p>由衷感谢国内外各界人士通过视频的方式为全民链打CALL，承蒙朋友们自全民链创建以来对我们的坚定支持，全民链也必将矢志不渝，永葆初心，不懈前行！</p>
+                <h3>运用区块链技术，让文物活起来</h3>
+                <p>CRBC通过运用区块链技术，将文物的实物资产进行估值，并将估值数据记录进入主链当中，构建自身分布式的资产数据库。数字化的文物资产可以作为融资融贷的质押担保，为具备创新力和发展前景的中小企业解决资本难题，促进资本的流通，解决目前金融体系，小微企业融资程序复杂，融资成本高昂，和融资渠道狭隘的难题。</p>
             </div>
             <div class="img clients animate delay j-videoAD2"></div>
             <img src="picture/vedio_2.jpg" alt=""  id="video2-2" class="click_vedio_img">
