--- a/index.html
+++ b/index.html
@@ -262,93 +262,7 @@
     <!-- Contacts -->
     <section id="contacts">
         <div class="box">
-            <!-- <div class="half animate">
-                <p class="logo-b">
-                    <img src="picture/logo-b.png" alt="">
-                </p>
-                <ul class="dt">
-                    <li>
-                        <p class="country">官方QQ群</p>
-                        <p class="city">4群：691935201</p>
-                        <p class="city">3群：169501060</p>
-                    </li>
-                    <li>
-                        <p class="country">商务合作</p>
-                        <p class="city">wac@wearechain.com</p>
-                    </li>
-                    <li>
-                        <p class="country">微信公众号</p>
-                        <p class="city">
-                            <img src="picture/qrcode.png" alt="">
-                        </p>
-                    </li>
-                    <li>
-                        <p class="country">媒购商城</p>
-                        <p class="city">
-                            <img src="picture/download.png" alt="">
-                        </p>
-                    </li>
-                </ul>
-                <ul class="dt">
-                    <li>
-                        <p class="country">官方QQ群</p>
-                        <p class="city">648613596</p>
-                    </li>
-                    <li>
-                        <p class="country">官方邮箱</p>
-                        <p class="city">contact@wearechain.com</p>
-                    </li>
-                    <li style="width: 100%">
-                        <p class="country" style="margin-bottom: 18px;">客服二维码</p>
-                        <p class="city" id="cc">
-                            <img src="picture/1.jpg" alt="">
-                            <img src="picture/2.jpg" alt="">
-                            <img src="picture/3.jpg" alt="">
-                        </p>
-                    </li>
-                </ul>
-                <div class="cont-list mob">
-                    <div class="cont">
-                        <p class="country">官方QQ群</p>
-                        <p class="city">4群：691935201</p>
-                        <p class="city">3群：169501060</p>
-                    </div>
-                    <div class="cont">
-                        <p class="country">商务合作</p>
-                        <p class="city">wac@wearechain.com</p>
-                    </div>
-                    <div class="cont">
-                        <p class="country">微信公众号</p>
-                        <p class="city">
-                            <img src="picture/qrcode.png" alt="">
-                        </p>
-                    </div>
-                    <div class="cont">
-                        <p class="country">媒购商城</p>
-                        <p class="city">
-                            <img src="picture/download.png" alt="">
-                        </p>
-                    </div>
-                    <div class="cont">
-                        <p class="country">客服二维码</p>
-                        <p class="city">
-                            <img src="picture/1.jpg" alt="" style="height: 169px;width:169px;">
-                        </p>
-                    </div>
-                    <div class="cont">
-                        <p class="country" style="height:26px;"></p>
-                        <p class="city">
-                            <img src="picture/2.jpg" alt="" style="height: 169px;width:169px;">
-                        </p>
-                    </div>                    
-                    <div class="cont">
-                        <p class="country" style="height:26px;"></p>
-                        <p class="city">
-                            <img src="picture/3.jpg" alt="" style="height: 169px;width:169px;">
-                        </p>
-                    </div>
-                </div>
-            </div> -->
+            
             <div class="half form active">
                 <a href="#" class="mob" id="toggle-form"></a>
                 <div id="tnx">
@@ -421,12 +335,12 @@
             </ul>
             <ul id="foot-cont">
                 <!-- <li><a href="/whitepaper/wac-white-paper.pdf" class="dl" target="_blank">下载白皮书</a></li> -->
-                <li style="display:none"><a href="tel:+0108888888" class="tel">+0108888888</a></li>
-                <li><a href="mailto:contact@wearechain.com" class="ltr">contact@wearechain.com</a></li>
+                <!-- <li style="display:none"><a href="tel:+0108888888" class="tel">+0108888888</a></li>
+                <li><a href="mailto:contact@wearechain.com" class="ltr">support@crbc.club</a></li> -->
             </ul>
             <p class="copyright">
-                © Copyright 2017 WeAreChain - All Rights Reserved<br/><br/>
-                <span>京ICP备17054772号</span>
+                © Copyright 2018 CRBC - All Rights Reserved<br/><br/>
+               
             </p>
         </div>
     </footer>
