更新最新内容

--- a/team.html
+++ b/team.html
@@ -89,8 +89,7 @@
                     <a href="/">首页</a>
                     <!-- <a href="/whitepaper/wac-white-paper.pdf">白皮书</a> -->
                     <a class="active" href="/team.html">团队</a>
-                    <!-- <a href="/check/">认购查询</a> -->
-                    <a href="#">wac兑换</a>
+                    
                 </nav>
             </div>
         </div>
@@ -147,10 +146,9 @@
             </ul>
             <ul id="foot-cont">
                 <!-- <li><a href="/whitepaper/wac-white-paper.pdf" class="dl" target="_blank">下载白皮书</a></li> -->
-                <li style="display:none"><a href="tel:+0108888888" class="tel">+0108888888</a></li>
-                <li><a href="mailto:contact@wearechain.com" class="ltr">contact@wearechain.com</a></li>
+                
             </ul>
-            <p class="copyright">© Copyright 2017 WeAreChain - All Rights Reserved</p>
+            <p class="copyright">© Copyright 2018 CRBC - All Rights Reserved</p>
         </div>
     </footer>
     <!-- /Footer Widget -->
