--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         </div>
         <div class="box dt vad1"><!-- web端 -->
             <div class="half animate">
-                <h3>六．皇家珍宝馆</h3>
+                <h3>皇家珍宝馆</h3>
                 <p>汉唐臻韵皇家珍宝馆馆藏文物艺术品12万件（组），是陕西目前最大的民间综合性博物馆。博物馆位于秦岭北麓，展陈面积2700平方米，由序厅、清朝文物展厅、佛教文物展厅、瓷器展厅、青铜器展厅、玉器展厅、金银器展厅、书画展厅、明清家俱展厅等九个展厅组成，展出藏品数量12余万件(组)，其中珍贵文物艺术品逾1万件(组)</p>
             </div>
             <div class="img clients animate delay j-videoAD1"></div>
